minor bug fixes

--- a/editor/index.html
+++ b/editor/index.html
@@ -281,55 +281,55 @@
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: facebook"></span> 
-                <input id="facebook" class="socialbox" type="text" placeholder="Your facebook page">
+                <input id="facebook" class="socialbox" type="text" placeholder="Your facebook url">
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: github"></span> 
-                <input id="github" class="socialbox" type="text" placeholder="Your github page">
+                <input id="github" class="socialbox" type="text" placeholder="Your github url">
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: github-alt"></span> 
-                <input id="github-alt" class="socialbox" type="text" placeholder="Your github page">
+                <input id="github-alt" class="socialbox" type="text" placeholder="Your github url">
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: google-plus"></span> 
-                <input id="google-plus" class="socialbox" type="text" placeholder="Your google+ page">
+                <input id="google-plus" class="socialbox" type="text" placeholder="Your google+ url">
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: instagram"></span> 
-                <input id="instagram" class="socialbox" type="text" placeholder="Your instagram handle">
+                <input id="instagram" class="socialbox" type="text" placeholder="Your instagram url">
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: linkedin"></span> 
-                <input id="linkedin" class="socialbox" type="text" placeholder="Your linkedin page">
+                <input id="linkedin" class="socialbox" type="text" placeholder="Your linkedin url">
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: pinterest"></span> 
-                <input id="pinterest" class="socialbox" type="text" placeholder="Your pinterest handle">
+                <input id="pinterest" class="socialbox" type="text" placeholder="Your pinterest url">
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: soundcloud"></span> 
-                <input id="soundcloud" class="socialbox" type="text" placeholder="Your soundcloud handle">
+                <input id="soundcloud" class="socialbox" type="text" placeholder="Your soundcloud url">
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: twitter"></span> 
-                <input id="twitter" class="socialbox" type="text" placeholder="Your twitter handle">
+                <input id="twitter" class="socialbox" type="text" placeholder="Your twitter url">
               </a>
             </li>
             <li>
@@ -340,14 +340,8 @@
             </li>
             <li>
               <a href="#">
-                <span class="uk-margin-small-right" uk-icon="icon: whatsapp"></span> 
-                <input id="whatsapp" class="socialbox" type="text" placeholder="Your whatsapp number">
-              </a>
-            </li>
-            <li>
-              <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: youtube"></span> 
-                <input id="youtube" class="socialbox" type="text" placeholder="Your youtube handle">
+                <input id="youtube" class="socialbox" type="text" placeholder="Your youtube url">
               </a>
             </li>
             <li>
