--- a/message/index.html
+++ b/message/index.html
@@ -33,7 +33,7 @@
           <a class="pointer">
             <span class="fa fa-phone scale"></span>
           </a>
-          <a class="pointer">
+          <a class="pointer largephone">
             <span class="fa fa-video-camera scale"></span>
           </a>
           <a class="pointer" uk-toggle="target: #user-info">
@@ -230,12 +230,6 @@
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: vimeo"></span>
-                <span data-output="social"></span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="uk-margin-small-right" uk-icon="icon: whatsapp"></span> 
                 <span data-output="social"></span>
               </a>
             </li>
