--- a/chat/index.html
+++ b/chat/index.html
@@ -43,6 +43,9 @@
       </div>
 
       <div class="sharelist hide">
+        <a class="pointer" data-action="edit-chat" target="_blank">
+          <i class="fa fa-edit"></i>
+        </a>
         <a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
           <i class="fa fa-facebook"></i>
         </a>
@@ -54,9 +57,6 @@
         </a>
         <a class="share-linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//mikethedj4.github.io/ArabEngo/&title=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20%23ArabEngoChat&summary=&source=" target="_blank">
           <i class="fa fa-linkedin-square"></i>
-        </a>
-        <a class="share-github pointer comingsoon">
-          <i class="fa fa-github"></i>
         </a>
       </div>
 
@@ -170,85 +170,85 @@
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: world"></span> 
-                <span data-output="social"></span>
+                <span id="website" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: facebook"></span> 
-                <span data-output="social"></span>
+                <span id="facebook" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: github"></span> 
-                <span data-output="social"></span>
+                <span id="github" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: github-alt"></span> 
-                <span data-output="social"></span>
+                <span id="github-alt" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: google-plus"></span> 
-                <span data-output="social"></span>
+                <span id="google-plus" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: instagram"></span> 
-                <span data-output="social"></span>
+                <span id="instagram" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: linkedin"></span> 
-                <span data-output="social"></span>
+                <span id="linkedin" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: pinterest"></span> 
-                <span data-output="social"></span>
+                <span id="pinterest" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: soundcloud"></span> 
-                <span data-output="social"></span>
+                <span id="soundcloud" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: twitter"></span> 
-                <span data-output="social"></span>
+                <span id="twitter" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: vimeo"></span>
-                <span data-output="social"></span>
+                <span id="vimeo" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: youtube"></span> 
-                <span data-output="social"></span>
+                <span id="youtube" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: credit-card"></span> 
-                <span data-output="social"></span>
+                <span id="paypal" class="socialbox" data-output="social"></span>
               </a>
             </li>
             <li>
               <a href="#">
                 <span class="uk-margin-small-right" uk-icon="icon: credit-card"></span> 
-                <span data-output="social"></span>
+                <span id="squarecash" class="socialbox" data-output="social"></span>
               </a>
             </li>
           </ul>
