--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </a>
         </div>
         <div>
-          <div uk-toggle="target: #arabengochats" class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m">
+          <div uk-toggle="target: #arabengochats" class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m" data-open="arabengochats">
             <div class="uk-card-badge uk-label">Community</div>
             <div class="uk-grid-small uk-flex-middle" uk-grid>
               <div class="uk-width-auto">
