remove hash if theres a change on the editor

--- a/editor/index.html
+++ b/editor/index.html
@@ -254,10 +254,10 @@
 
           <button id="top" class="uk-offcanvas-close" type="button" uk-close></button>
 
-          <div class="tc pointer avatarbg" data-set="avatar" style="background-image: url('../imgs/kareem.svg')">&nbsp;</div>
+          <div class="tc pointer avatarbg" data-set="avatar" style="background-image: url('../imgs/akira.svg')">&nbsp;</div>
           <div class="tc">
-            <input id="setGender" data-call="gender" type="checkbox" checked/>
-            <label for="setGender" class="pointer gender" data-gender="male"></label>
+            <input id="setGender" data-call="gender" type="checkbox" />
+            <label for="setGender" class="pointer gender" data-gender="female"></label>
           </div>
           <h3 class="tc nameoutput contact" data-output="name" class="tc"></h3>
           <h4 class="location">
