--- a/chat/index.html
+++ b/chat/index.html
@@ -149,7 +149,7 @@
 
           <button class="uk-offcanvas-close" type="button" uk-close></button>
           
-          <div class="tc cur-defaut avatarbg" style="background-image: url('../imgs/kareem.svg')">&nbsp;</div>
+          <div class="tc cur-defaut avatarbg" data-avatarurl="../imgs/akira.svg"  style="background-image: url('../imgs/kareem.svg')">&nbsp;</div>
           <div class="tc">
             <input id="setGender" data-call="gender" type="checkbox" disabled checked />
             <label for="setGender" class="gender" data-gender="male"></label>
