--- a/editor/index.html
+++ b/editor/index.html
@@ -254,7 +254,7 @@
 
           <button id="top" class="uk-offcanvas-close" type="button" uk-close></button>
 
-          <div class="tc pointer avatarbg" data-set="avatar" style="background-image: url('../imgs/akira.svg')">&nbsp;</div>
+          <div class="tc pointer avatarbg" data-set="avatar" data-avatarurl="../imgs/akira.svg" style="background-image: url(../imgs/akira.svg)">&nbsp;</div>
           <div class="tc">
             <input id="setGender" data-call="gender" type="checkbox" />
             <label for="setGender" class="pointer gender" data-gender="female"></label>
