add hash for introduction too

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <hr class="uk-divider-icon">
     <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
       <div>
-        <div uk-toggle="target: #introduction" class="pointer uk-card uk-card-primary uk-card-hover uk-card-body uk-width-1-@m">
+        <div uk-toggle="target: #introduction" class="pointer uk-card uk-card-primary uk-card-hover uk-card-body uk-width-1-@m" data-open="introduction">
           <div class="uk-card-badge uk-label">Beginner</div>
           <h3 class="uk-card-title">Introduction</h3>
           <p>All you need to know about ArabEngo!</p>
