--- a/lessons/kareem.html
+++ b/lessons/kareem.html
@@ -43,6 +43,9 @@
       </div>
 
       <div class="sharelist hide">
+        <a class="pointer" href="../editor/" target="_blank">
+          <i class="fa fa-edit"></i>
+        </a>
         <a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
           <i class="fa fa-facebook"></i>
         </a>
@@ -54,9 +57,6 @@
         </a>
         <a class="share-linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//mikethedj4.github.io/ArabEngo/&title=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20%23ArabEngoChat&summary=&source=" target="_blank">
           <i class="fa fa-linkedin-square"></i>
-        </a>
-        <a class="share-github pointer comingsoon">
-          <i class="fa fa-github"></i>
         </a>
       </div>
 
