Open sample chats in editor

--- a/lessons/kareem.html
+++ b/lessons/kareem.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="sharelist hide">
-        <a class="pointer" href="../editor/" target="_blank">
+        <a class="pointer" href="../editor/#450648344683aae5489eb8cab990b070" target="_blank">
           <i class="fa fa-edit"></i>
         </a>
         <a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
