added emoticon into sample chat

--- a/lessons/akira.html
+++ b/lessons/akira.html
@@ -77,6 +77,11 @@
           <div class="them msg hide">
             <p class="message" data-meaning="My name is Akira">انا اسمي أكيرا</p>
           </div>
+          <div class="them emoticon msg hide">
+             <p class="message">
+              <img src="../imgs/emoticons/emoji_1.gif">
+            </p>
+          </div>
           <div class="tr you msg hide">
             <p class="message" data-meaning="Nice to meet you">فر صة سعيدة</p>
           </div>
