--- a/lessons/kareem.html
+++ b/lessons/kareem.html
@@ -77,6 +77,11 @@
           <div class="them msg hide">
             <p class="message" data-meaning="My name is Kareem">انا اسمي كريم</p>
           </div>
+          <div class="them emoticon msg hide">
+             <p class="message">
+              <img src="../imgs/emoticons/emoji_1.gif">
+            </p>
+          </div>
           <div class="tr you msg hide">
             <p class="message" data-meaning="Nice to meet you">فر صة سعيدة</p>
           </div>
