--- a/editor/index.html
+++ b/editor/index.html
@@ -167,7 +167,7 @@
             <div class="grid">
               <div class="grid__col-12 tc">
                 <input class="txtbox ib" type="search" placeholder="search for something like dogs" data-search="flicker" style="width: calc(100% - 1.11111em - 30px); margin-top: 1.11111em; display: inline-block; padding-right: 50px;" />
-                <button class="clear-search hide" data-clear="search">
+                <button class="clear-search uk-modal-close-default hide" data-clear="search">
                   <span class="fa fa-times scale"></span>
                 </button>
               </div>
