show more results

--- a/editor/index.html
+++ b/editor/index.html
@@ -166,7 +166,7 @@
           <div class="uk-modal-body" uk-overflow-auto style="padding: 0; height: 100vh;">
             <div class="grid">
               <div class="grid__col-12 tc">
-                <input class="txtbox ib" type="search" placeholder="search for something like dogs" data-search="flicker" style="width: calc(100% - 1.11111em - 30px); margin-top: 1.11111em; display: inline-block; padding-right: 50px;" />
+                <input type="search" class="txtbox ib" placeholder="search for something like dogs" data-search="flicker" style="width: calc(100% - 1.11111em - 30px); margin-top: 1.11111em; display: inline-block; padding-right: 50px;" />
                 <button class="clear-search uk-modal-close-default hide" data-clear="search">
                   <span class="fa fa-times scale"></span>
                 </button>
