minor css revision

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
       <div>
         <div class="uk-card uk-card-default uk-card-body uk-text-center uk-width-1-@m contribute">
           <h3 class="uk-card-title uk-text-center">Contribute to ArabEngo!</h3>
-          <p class="donate">
-            <span>
+          <div class="donate">
+            <div>
               <a href="https://cash.me/$mschwar4" target="_blank">
                 <img src="imgs/square_cash.svg" alt="Donate via SquareCash">
               </a>
-            </span>
-            <span>
+            </div>
+            <div>
               Your <a href="https://github.com/mikethedj4/ArabEngo" target="_blank"> <i class="fa fa-github"></i> contribution</a> helps keep this application free and under development!
-            </span>
-            <span>
+            </div>
+            <div>
               <a href="https://www.paypal.me/mikethedj4" target="_blank">
                 <img src="imgs/paypal.svg" alt="Donate via PayPal">
               </a>
-            </span>
-          </p>
+            </div>
+          </div>
 
 
         </div>
