--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
         
         <div class="uk-navbar-right">
           <ul class="uk-navbar-nav">
-            <li class="uk-navbar-item"><a href="#">Contribute</a></li>
+            <li class="uk-navbar-item"><a href="https://github.com/mikethedj4/ArabEngo/" target="_blank">Contribute</a></li>
             <li class="uk-navbar-item">
-              <a href="#">Donate</a>
+              <a href="javascript:void(0)">Donate</a>
               <div class="uk-navbar-dropdown">
                 <ul class="uk-nav uk-navbar-dropdown-nav">
-                  <li><a href="#">Donate via PayPal</a></li>
-                  <li><a href="#">Donate via SquareCash</a></li>
+                  <li><a href="https://www.paypal.me/mikethedj4" target="_blank">Donate via PayPal</a></li>
+                  <li><a href="https://cash.me/$mschwar4" target="_blank">Donate via SquareCash</a></li>
                 </ul>
               </div>
             </li>
-            <li class="uk-navbar-item"><a href="#">Fork</a></li>
+            <li class="uk-navbar-item"><a href="https://github.com/mikethedj4/ArabEngo/">Fork</a></li>
             <li class="uk-navbar-item"><button class="uk-button uk-button-default" onclick="window.location.href = 'app.html';">Launch</button></li>
           </ul>
         </div>
