--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="uk-navbar-nav">
             <li class="uk-navbar-item"><a href="https://github.com/mikethedj4/ArabEngo/" target="_blank">Contribute</a></li>
             <li class="uk-navbar-item">
-              <a href="javascript:void(0)">Donate</a>
+              <a class="pointer">Donate</a>
               <div class="uk-navbar-dropdown">
                 <ul class="uk-nav uk-navbar-dropdown-nav">
                   <li><a href="https://www.paypal.me/mikethedj4" target="_blank">Donate via PayPal</a></li>
