fork should open in a new tab

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </ul>
               </div>
             </li>
-            <li class="uk-navbar-item"><a href="https://github.com/mikethedj4/ArabEngo/">Fork</a></li>
+            <li class="uk-navbar-item"><a href="https://github.com/mikethedj4/ArabEngo/" target="_blank">Fork</a></li>
             <li class="uk-navbar-item"><button class="uk-button uk-button-default" onclick="window.location.href = 'app.html';">Launch</button></li>
           </ul>
         </div>
